replacing MaxPermSize option with MaxMetaspaceSize, config for forked frames changed to jav 1.8